core_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
spec:
  selector:
    matchLabels:
      app: core-deployment-app
  replicas: 1
  template:
    metadata:
      labels:
        app: core-deployment-app
    spec:
      containers:
        - name: core
          image: longali/coreservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4040
          env: # Setting Enviornmental Variables
            - name: EUREKA_DEFAULT_ZONE
              valueFrom:
                configMapKeyRef:
                  name: eureka-config
                  key: EUREKA_DEFAULT_ZONE

            - name: HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: eureka-config
                  key: HOSTNAME
