kernal_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-deployment
spec:
  selector:
    matchLabels:
      app: kernel-deployment-app
  replicas: 1
  template:
    metadata:
      labels:
        app: kernel-deployment-app
    spec:
      containers:
        - name: kernel
          image: longali/kernelservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
          env: # Setting Enviornmental Variables
            - name: EUREKA_DEFAULT_ZONE
              valueFrom:
                configMapKeyRef:
                  name: xgarage-db-config
                  key: EUREKA_DEFAULT_ZONE

            - name: HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: xgarage-db-config
                  key: HOSTNAME
