gateway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  selector:
    matchLabels:
      app: gateway-deployment-app
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-deployment-app
    spec:
      containers:
        - name: gateway
          image: longali/gatewayservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6060
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  selector:
    app: gateway-deployment-app
  ports:
    - protocol: "TCP"
      port: 30001
      targetPort: 6060
      nodePort: 30001
  type: NodePort
