registry_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
spec:
  selector:
    matchLabels:
      app: registry-deployment-app
  replicas: 1
  template:
    metadata:
      labels:
        app: registry-deployment-app
    spec:
      containers:
        - name: registry
          image: longali/registryservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
spec:
  selector:
    app: registry-deployment-app
  ports:
    - protocol: "TCP"
      port: 8761
      targetPort: 8761
  type: NodePort
