web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: web_angular:latest
        imagePullPolicy: Never  
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: angular-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30005
  selector:
    app: angular-app
