eureka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-ingress
spec:
  rules:
    - host: spring.ip-teamway.com # Replace with your subdomain
      http:
        paths:
          - path: /eureka/ # Access Eureka on this specific path
            pathType: Prefix
            backend:
              service:
                name: registry-svc # Replace if your Eureka service has a different name
                port:
                  number: 30000 # Replace if your Eureka service listens on a different port
